energetica/static/energetica.css
/* ... */
.profile-icon .small_letter:nth-child(1) {
    top: 2px;
    left: 2px;
}

.profile-icon .small_letter:nth-child(2) {
    top: 2px;
    right: 2px;
}

.profile-icon .small_letter:nth-child(3) {
    bottom: 2px;
    left: 2px;
}

.profile-icon .small_letter:nth-child(4) {
    bottom: 2px;
    right: 2px;
}

.message_input {
    padding: 8px;
    border: none;
    width: 80%
}

.message_container {
    flex: 1;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.message_infos {
    font-size: min(16px, 2vh);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.message_text {
    padding: 6px 12px;
    font-size: min(20px, 2.8vh);
}

.message_text.left {
    background-color: #e5d9b6;
    border-radius: 10px 10px 10px 0;
}

.message_text.right {
    background-color: #d8e2b1;
    border-radius: 10px 10px 0 10px;
}

.message {
    margin-bottom: 5px;
}

.message.left {
    align-self: flex-start;
    margin-right: 20%;
}

.message.right {
    align-self: flex-end;
    margin-left: 20%;
}

.img {
    width: 250px
}

#profile_header.hidden {
    display: none;
}

.player_username {
    font-size: min(35px, 4.4vh);
    border-radius: 16px;
    color: #285430;
    margin: 16px;
    padding: 2px 20px;
    border: 3px solid #285430;
    background-color: #ced6ab;
}

.popup {
    z-index: 30;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
}

.popup.hidden {
    visibility: hidden;
}

#web_push_notification_switch {
    top: 95%;
    border-radius: 8px;
}

.create_chat_input {
    padding: 8px;
    display: block;
    border: none;
}

.plus {
    text-align: center;
    width: 39px;
    margin-left: 8px;
    font-size: 30px
}

.plus:hover {
    background-color: #a4be7b;
    cursor: pointer;
}

.suggestions1,
.suggestions2 {
    max-height: 500px;
    overflow: auto;
    list-style: none;
    width: 100%;
    background-color: #ffffff;
}

.suggestions-items {
    padding: 8px 16px;
}

.suggestions-items:hover {
    background-color: #e5d9b6;
}

.facility {
    display: flex;
    flex-direction: row;
    cursor: pointer;
}

.infotext {
    flex: 1;
    justify-content: space-between;
}

.infobox {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.infobox.requirements {
    padding-left: 16px;
    width: 196px;
}

.constrain_description_txt {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
    /* Number of lines to show */
    overflow: hidden;
    text-overflow: ellipsis;
}

#constructionContent {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
}

#constructionContent.shown {
    max-height: 100px;
    transition: max-height 0.3s ease;
}

#constructionContent.hidden {
    max-height: 0;
    transition: max-height 0.3s ease;
    overflow: hidden;
}

#constructionContent_smartphone {
    display: None;
}

.construction_info {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    flex-grow: 1;
}

.construction_button_container {
    width: 250px;
    overflow: hidden;
    transition: opacity 0.3s ease;
}

.construction_button_container.hidden {
    opacity: 0;
}

#infotable {
    overflow: hidden;
    margin: 14px 14px 14px 0px;
    position: relative;
}

#infotable.minimized {
    max-height: 139px;
    transition: max-height 0.3s ease;
}

#infotable.maximized {
    overflow: visible;
    max-height: 250px;
    transition: max-height 0.3s ease;
}

.overlay {
    pointer-events: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: transparent;
    box-shadow: rgba(40, 84, 48, 1) 0px -40px 20px -28px inset;
    z-index: 5;
    transition: opacity 0.3s ease;
}

.overlay.hidden {
    opacity: 0;
}

.dashboard_overview_container {
    padding: 16px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 32px;
}

.dashboard_overview_container a {
    text-decoration: none;
    color: #000;
    width: 250px;
    height: 150px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #e5d9b6;
    border-radius: 16px;
    border: #285430 4px solid;
}

.resource_market_container {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 32px;
    justify-content: space-evenly;
    align-items: center
}

.resource_market_block {
    width: 250px;
    cursor: pointer;
}

.hidden-info {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease;
}

.expanded-info {
    max-height: 500px;
}

.graph-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.graph-container img {
    width: 600px;
    max-width: 100%;
}

img.small.graph-container {
    width: 300px;
    max-width: 100%;
}

.graph-container img.large {
    width: 1100px;
    max-width: 100%;
}

.info_icon {
    width: 0.55em;
    height: auto;
    filter: invert(100%);
}

.info_icon_container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-left: 30px;
    margin-right: -70px;
    width: 1em;
    height: 1em;
    border-radius: 50%;
    cursor: pointer;
}

.wikipedia_icon_container {
    display: inline-block;
    font-size: min(14px, 1.8vh);
    height: 1em;
    padding: 0.5em 0.37em;
    margin: 0 16px;
    transform: translate(0, -2px);
    border-radius: 50%;
    cursor: help;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
}

#info_popup {
    max-width: 700px;
    min-width: 500px;
    min-height: 300px;
    top: 25%;
}

.year-background {
    width: 100%;
    height: 10px;
    background-color: white;
    position: relative;
}
/* ... */

